[package]
name = "spotify_mapped"
version = "0.1.0"
authors = ["gvelchuru <gvelchuru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
futures = "*"
scraper = "*"
regex = "*"
