[package]
name = "spotify_mapped"
version = "0.1.0"
authors = ["Nikola Dancejic <nikola.dancejic@live.com>", "gvelchuru <gvelchuru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.9" }
tokio = { version = "0.2", features = ["full"] }
tokio1 = { version = "1.0", package = "tokio", features = ["full"] }
reqwest = { version = "0.11.2" }
scraper = { version = "*" }
select = { version = "*" }
