[package]
name = "spotify_mapped"
version = "0.1.0"
authors = ["Nikola Dancejic <nikola.dancejic@live.com>", "gvelchuru <gvelchuru@gmail.com>"]
edition = "2018"

[dependencies]
rspotify = { version = "0.9" }
tokio = { version = "0.2", features = ["full"] }
tokio1 = { version = "1.0", package = "tokio", features = ["full"] }
reqwest = { version = "0.11.2" }
select = { version = "0.5.0" }
regex = { version = "1" }
google_maps = { version = "1.0.1" }
rust_decimal = { version = "1.6.0" }
num-traits = { version = "*" }
